clusters/k3s-home/apps/monitoring/kube-prometheus-stack/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "prometheus.fletcherlabs.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
